# awssameetingassistant

./: .env.example  .gitignore  DESIGN.md  PLAN.md  README.md  debug_mermaid.html  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  roles.py  storage.py
backend/agent/: recommendation_agent.py
backend/agentcore/: agent_app.py  client.py  memory.py
backend/analysis/: engine.py  models.py  prompts.py
backend/audio/: capture.py
backend/ccm/: engine.py  models.py
backend/knowledge_base/: bedrock_kb.py  docs_search.py  embeddings.py  qdrant_client.py
backend/transcription/: transcribe_stream.py  whisper_stream.py
backend/websocket/: manager.py
data/: kb_seeds.txt  urls.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActionItemsPanel.tsx  AnalysisPanel.tsx  AnalysisView.tsx  DiagramsPanel.tsx  DirectivesBar.tsx  MermaidRender.tsx  PastMeetingsDrawer.tsx  RecommendationCard.tsx  RecommendationsPanel.tsx  SpeakerMappingPanel.tsx  StartMeetingModal.tsx  TranscriptChunkItem.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: meetingStore.ts
frontend/src/types/: index.ts
scripts/: ingest.py  scrape_aws_docs.py  setup_agentcore.py  setup_kb.py
tests/: test_bedrock_kb.py  test_ccm_engine.py  test_qdrant_client.py
