[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Real-Time AWS Meeting Intelligence Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # AWS SDKs
    "amazon-transcribe>=0.6.4",
    "boto3>=1.42.85",
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    # Config
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    # Audio capture
    "sounddevice>=0.5.1",
    # Ingestion / content parsing
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    # CLI output
    "rich>=13",
    # Utilities
    "numpy>=1.26",
]

[project.optional-dependencies]
# Local Whisper STT — install on MacBook for offline transcription
# uv sync --extra whisper
whisper = [
    "faster-whisper>=1.1.0",
]
# Amazon Bedrock AgentCore Runtime + Memory
# uv sync --extra agentcore
agentcore = [
    "bedrock-agentcore",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
